"#" items refer to tickets. See <http://dev.openguides.org/report/9> for details.

More detailed changelogs can be found at
<http://dev.openguides.org/log/trunk>.

0.66    ?
        Add CSS classes for each category and locale to the "content" div
          (and hence we now require version 2.24 of Template).
        Switch to using Geo::Coordinates::OSGB/ITM instead of
          Geography::NationalGrid (which no longer exists on CPAN).
        Make sure that whitespace is collapsed in autocreated categories
          and locales, to avoid creating undeletable pages.
        Add an autocreate_content.tt template to include a map link in content
          for autocreated categories and locales (#275).

0.65    28 February 2010
        Fix some more broken POD and add POD unit test (#268)
        Don't display revision info for nodes that don't exist (#193)
        Return HTTP 404 status when displaying a node that doesn't exist (#102)
        Add Recent Changes tests (refers to #270)
        Some test cleanups (#271)
        Add read_only config option to turn off edits on a guide
          completely (#276)

0.64    23 February 2009
        Correctly specify all build_requires (#245)
        Fix some broken POD (#246)
        Metadata discovery features (action=metadata)
        JSON support for node details and metadata discovery
        Correctly validate web site URLs during edit and display,
        and truncate URLs that are too long (#21)
        Change default database type to sqlite (#241)
        Set content charset correctly in RDF (#260)
        Display geodata ellipsoid to user in edit from (#230)
        Fix install with CPAN when Config::Tiny not already installed (#224)
        Add an admin navbar, to be displayed if the user requests (#261)
        Move the node image outside the metadata div, to aid styling (#222)
        Add the ability to whitelist hosts who can change moderated nodes
          without explicit moderation (#203)