@@ -155,6 +155,7 @@ t/84_navbar_admin.t
 t/85_universal_edit_link.t
 t/86_recent_changes.t
 t/90_css_category_locale_classes.t
+t/91_username_in_templates.t
 t/templates/15_test.tt
 wiki.cgi
 META.json
